# nlp_bonsai

./: LICENSE  README.md  pyproject.toml  requirements.txt
bonsait/: __init__.py  cache.py  class_repo.py  config.py  configs.py  core.py  match.py  model_repo.py
bonsait/data_preprocess/: clean_concito2exio.py  clean_fao2exio.py  clean_iea2exio.py  main.py
bonsait/utils/: __init__.py  similarity_func.py
data/clean/: correspondence.db
data/raw/: IEAvsExiobase_products.xlsx  concito500_exio4.xlsx
notebooks/: example_usage.ipynb  fine_tuning.ipynb  match_ifa2_fao.ipynb  pretrained_models.ipynb  sbert.ipynb
notebooks/data/: Exio4_vs_FCL.xlsx  FertiliserCorr.xlsx  corr_fao_ifa.csv
notebooks/data/raw/: Exio_4_classif_bridge_for_LCI_coeff.xlsx  eurostat_waste_treatments_correspondence.csv
scripts/: configs.py
scripts/data/clean/: correspondence.db
scripts/data/final_result/: result.csv
scripts/data/raw/: Master_classif_exio4.xlsx  exiobase4_descriptions.csv
scripts/data_preprocess/: clean_concito2exio.py  clean_fao2exio.py  clean_iea2exio.py  config.py  main.py  models.py
src/bonsait/: config.py  models.py
src/bonsait/data_preprocess/: clean_iea2exio.py  main.py
tests/: conftest.py  test_class_finder.py  test_class_transformer.py  test_embedding_cache.py
