[tool.poetry]
name = "bonsait"
version = "0.1.0"
description = ""
authors = ["mikoto <fanyang@plan.aau.dk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "1.0.0"
ipywidgets = "8.0.4"
numpy = "1.24.2"
pandas = "1.5.3"
scikit-learn = "1.2.1"
sentence-transformers = "2.2.2"
tqdm = "4.64.1"
nltk = "3.8.1"
openpyxl = "3.1.2"
xlrd = "2.0.1"
pydantic = "2.4.2"
sqlalchemy = "2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
